fixed plyr iframe loading height jumping

--- a/css/xabber.css
+++ b/css/xabber.css
@@ -16324,8 +16324,12 @@ input[type='range'].voice-message-volume:focus {
     width: unset;
     max-width: 100%;
 }
+.chat-message .chat-msg-link-reference-content .link-message-reference .embed-video .iframe-loading,
 .chat-message .chat-msg-link-reference-content .link-message-reference .embed-video .plyr{
     height: 216px;
+}
+.chat-message .chat-msg-link-reference-content .link-message-reference .embed-video .iframe-loading{
+    width: 100%;
 }
 .chat-message .chat-msg-link-reference-content .link-message-reference .attached-text-block {
     width: 100%;
